# duck_os

./: Cargo.toml  README.md  run_kernel.sh
.cargo/: config.toml
executable/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: cpu_exceptions.rs  exit.rs  main.rs  panic.rs  serial_port.rs  shell.rs  vga.rs
kernel/src/display/: macros.rs  mod.rs  vga.rs  writer.rs
kernel/src/interrupts/: faults.rs  mod.rs
kernel/src/interrupts/pic/: keyboard.rs  mod.rs
kernel/src/memory/: mod.rs
