[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9.0"
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.10.0"
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "kernel"
test = true
bench = false

[package.metadata.bootimage]
test-success-exit-code = 33
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
